package _06_DistributedJobScheduler;

public record LogData() {
}
