package _06_DistributedJobScheduler;

public class LoggingService {
    public void log(LogData data) {}
}
