package _06_DistributedJobScheduler.jobContext;

public class JobAllocatedResource {

}
