package _06_DistributedJobScheduler.jobContext.jobFailureStrategy;

import _06_DistributedJobScheduler.jobContext.JobContext;

public class Alert implements  FailureStrategy{
    @Override
    public void handle(JobContext job) {

    }
}
