package _06_DistributedJobScheduler.jobs;

public interface Job {
    public void execute();
}
