package _06_DistributedJobScheduler.lifecycle;

public abstract class LifecycleState {
    protected String state;
    public abstract String getState();
}
